r10806/sofa : push c121078..8afcca1
* commit 8afcca13fb22b748d12a0f5c41afed529bf35ed1
SofaPython: add -fno-strict-aliasing flag

Python's implementation breaks strict-aliasing rules. This commits adds
the -fno-strict-aliasing compiler flag to deal with it, instead of the
dumb workaround I commited previously.

   2 files changed, 8 insertions(+), 8 deletions(-)




Former-commit-id: 27105c962355714c0fc3fc906804e8dce6d55c99

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,13 @@ set(SOURCE_FILES
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
+# Python's implementation deliberately breaks strict-aliasing rules, so we
+# compile with -fno-strict-aliasing to prevent the compiler from relying on
+# those rules to optimize the code.
+if(${CMAKE_COMPILER_IS_GNUCC})
+    AddCompilerFlags("-fno-strict-aliasing")
+endif()
+
 AddCompilerDefinitions("SOFA_BUILD_SOFAPYTHON")
 AddLinkerDependencies(SofaCore SofaSimulationCommon SofaGuiCommon ${PYTHON_LIBRARIES})
 
