Revert "Convert SofaPython to the new plugin system"
This reverts commit 8ac4fd9c6caee3acd17dfb6ecef2bd404e91caa6 [formerly 3c574760cd6c4381063adb2c232a5a04c8af480c].


Former-commit-id: cb19c455c23f8b32b29b4893f84da4a16c3a470c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ endif()
 include_directories(${PYTHON_INCLUDE_DIRS})
 
 set(HEADER_FILES
-    SofaPython.h
+
+    initSofaPython.h
     ScriptController.h
     PythonScriptController.h
     PythonMacros.h
@@ -54,10 +55,12 @@ set(HEADER_FILES
     Binding_LinearSpring.h
     Binding_VisualModel.h
     SceneLoaderPY.h
-    ScriptEnvironment.h)
+    ScriptEnvironment.h
+	)
 
 set(SOURCE_FILES
-    SofaPython.cpp
+
+    initSofaPython.cpp
     ScriptController.cpp
     PythonScriptController.cpp
     PythonEnvironment.cpp
@@ -94,15 +97,17 @@ set(SOURCE_FILES
     Binding_LinearSpring.cpp
     Binding_VisualModel.cpp
     SceneLoaderPY.cpp
-    ScriptEnvironment.cpp)
+    ScriptEnvironment.cpp
+	)
 
 set(PYTHON_FILES
-    SofaPython.py)
+    SofaPython.py
+)
 
 # include python files
 include(./python/python.cmake)
 
-sofa_add_plugin(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${PYTHON_FILES})
+add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PYTHON_FILES})
 
 # Python's implementation deliberately breaks strict-aliasing rules, so we
 # compile with -fno-strict-aliasing to prevent the compiler from relying on
