--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ set(HEADER_FILES
 
     initSofaPython.h
     ScriptController.h
+	ScriptFunction.h
     PythonScriptController.h
+	PythonScriptFunction.h
     PythonMacros.h
     PythonEnvironment.h
     Binding.h
@@ -62,7 +64,9 @@ set(SOURCE_FILES
 
     initSofaPython.cpp
     ScriptController.cpp
+    ScriptFunction.cpp
     PythonScriptController.cpp
+	PythonScriptFunction.cpp
     PythonEnvironment.cpp
     Binding.cpp
     Binding_SofaModule.cpp
