--- a/config.h.in
+++ b/config.h.in
@@ -27,9 +27,16 @@
 
 #define SOFAPYTHON_VERSION_STR "0.0"
 
-#include <sofa/helper/system/config.h>
+#include <SofaGui/SofaGuiConfig.h>
+
+#define SOFAPYTHON_MAJOR_VERSION ${SOFAPYTHON_MAJOR_VERSION}
+#define SOFAPYTHON_MINOR_VERSION ${SOFAPYTHON_MINOR_VERSION}
+#define SOFAPYTHON_BUILD_VERSION ${SOFAPYTHON_BUILD_VERSION}
+
+#define SOFA_HAVE_PYTHON
 
 #ifdef SOFA_BUILD_SOFAPYTHON
+#  define SOFA_TARGET SofaPython
 #  define SOFA_SOFAPYTHON_API SOFA_EXPORT_DYNAMIC_LIBRARY
 #else
 #  define SOFA_SOFAPYTHON_API SOFA_IMPORT_DYNAMIC_LIBRARY
