--- a/SofaPythonConfig.cmake.in
+++ b/SofaPythonConfig.cmake.in
@@ -1,5 +1,6 @@
 # CMake package configuration file for the SofaPython plugin
 
+@PACKAGE_GUARD@
 @PACKAGE_INIT@
 
 find_package(PythonLibs 2.7 REQUIRED)
