--- a/SofaPythonConfig.cmake.in
+++ b/SofaPythonConfig.cmake.in
@@ -3,10 +3,16 @@
 @PACKAGE_GUARD@
 @PACKAGE_INIT@
 
+set(SOFAPYTHON_HAVE_SOFATEST @SOFAPYTHON_HAVE_SOFATEST@)
+
 find_package(PythonLibs 2.7 REQUIRED)
 find_package(SofaGui REQUIRED)
 find_package(SofaMiscMapping REQUIRED)
 find_package(Eigen3 QUIET REQUIRED)
+
+if(SOFAPYTHON_HAVE_SOFATEST)
+	find_package(SofaTest QUIET REQUIRED)
+endif()
 
 if(NOT TARGET SofaPython)
     include("${CMAKE_CURRENT_LIST_DIR}/SofaPythonTargets.cmake")
