--- a/SofaPythonConfig.cmake.in
+++ b/SofaPythonConfig.cmake.in
@@ -4,6 +4,7 @@
 @PACKAGE_INIT@
 
 set(SOFAPYTHON_HAVE_SOFATEST @SOFAPYTHON_HAVE_SOFATEST@)
+set(SOFAPYTHON_HAVE_SOFAEXPORTER @SOFAPYTHON_HAVE_SOFAEXPORTER@)
 
 find_package(PythonLibs 2.7 QUIET REQUIRED)
 find_package(SofaGui QUIET REQUIRED)
@@ -13,6 +14,10 @@ find_package(Eigen3 QUIET REQUIRED)
 
 if(SOFAPYTHON_HAVE_SOFATEST)
 	find_package(SofaTest QUIET REQUIRED)
+endif()
+
+if(SOFAPYTHON_HAVE_SOFAEXPORTER)
+	find_package(SofaExporter QUIET REQUIRED)
 endif()
 
 if(NOT TARGET SofaPython)
