--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,8 +149,11 @@ find_package(Eigen3 REQUIRED)
 
 sofa_find_package(SofaTest QUIET)
 if(SofaTest_FOUND)
-    list(APPEND HEADER_FILES "Python_test.h")
-    list(APPEND SOURCE_FILES "Python_test.cpp")
+    list(APPEND HEADER_FILES 
+    	Python_test.h
+    	compat/SofaTest/Python_test.h
+	)
+    list(APPEND SOURCE_FILES Python_test.cpp)
     list(APPEND PYTHON_FILES
         python/SofaTest/Macro.py
         python/SofaTest/__init__.py
@@ -200,6 +203,7 @@ add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES} ${PYTHON_FILE
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PYTHON_INCLUDE_DIRS}
     PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/>"
+    PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/compat>"
     PUBLIC "$<INSTALL_INTERFACE:include>"
     )
 
