[SofaPython] CLEAN SofaExporter soft dep for bindings

--- a/config.h.in
+++ b/config.h.in
@@ -24,6 +24,8 @@
 
 #include <sofa/config.h>
 
+#cmakedefine01 SOFAPYTHON_HAVE_SOFAEXPORTER
+
 #define SOFAPYTHON_VERSION_STR "${SOFAPYTHON_VERSION}"
 #define SOFAPYTHON_MAJOR_VERSION ${SOFAPYTHON_MAJOR_VERSION}
 #define SOFAPYTHON_MINOR_VERSION ${SOFAPYTHON_MINOR_VERSION}
