[SofaPython] Move python-related files to SofaPython (#1887)
* move python basemechanics test into sofapython

* move scene involved with SofaPython (into SofaPython)

--- a/SofaPython_test/CMakeLists.txt
+++ b/SofaPython_test/CMakeLists.txt
@@ -40,6 +40,7 @@ set(PYTHON_FILES
     python/test_BindingSofa.py
     python/test_PythonEnvironment.py
     python/unicodeData.py
+    python/MechanicalObject_test.py
 )
 
 
